--- a/src/app/layout/styles.css
+++ b/src/app/layout/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Montserrat', sans-serif;
-  background-color: #eaeaea;
+  background-color: #F9FAFC;
 }
 
 .react-datepicker-wrapper {
