--- a/src/css/Dashboard.module.css
+++ b/src/css/Dashboard.module.css
@@ -1,28 +1,32 @@
 /* containers */
 
+.dashboardContainer {
+    margin-left: 200px;
+    padding: 3% 2% 0 2% !important;
+}
+
+.dashboardListContainer {
+    border: none !important;
+    box-shadow: none !important;
+ }
+
 .inventoryTitlesContainer {
-    border: none!important;
     font-weight: bold;
     color: #14b1ab;
 }
 
-
-.DashboardListContainer {
-   border: none !important;
-   box-shadow: none !important;
-}
-
-.dashboardContainer {
-    margin-left: 200px;
-    padding-top: 3% !important;
-}
-
-.DashboardListElement {
+.dashboardListElement {
     border: none !important;
     box-shadow: none !important;
     color: #697686 !important;
+    background-color: #fff !important;
     /* border: 1px solid  #14b1ab !important; */
     /* box-shadow: 5px 5px  20px #14b1ab !important; */
+}
+
+.changeDateContainer {
+    display: flex;
+    justify-content: space-around;
 }
 
 /* dashboard dropdown button */
@@ -66,6 +70,15 @@ box-shadow: none !important;
 }
 
 /* appointments */
+
+.reasonHeader {
+    color: #ACADAd !important; 
+}
+
+.itemDropdown {
+    text-align: right !important;
+}
+
 .hour {
     border-right: 4px solid  #14b1ab;
 }
@@ -78,6 +91,17 @@ box-shadow: none !important;
     text-align: left !important;
     position: relative;
     top: 10px;
+}
+
+/* profit */
+
+.activeMonth {
+    background-color: #14b1ab;
+    width: 50%;
+}
+
+.profitMonthsList {
+    text-align: left !important;
 }
 
 /* media queries */
