--- a/src/css/Form.module.css
+++ b/src/css/Form.module.css
@@ -1,7 +1,10 @@
 .formContainer {
   margin-left: 200px !important;
+  margin-top: 0 !important;
   position: relative;
   top: 50px;
+  left: 40px;
+  width: 80% !important;
 }
 
 .formSubmitBtn {
