--- a/src/css/HomePage.module.css
+++ b/src/css/HomePage.module.css
@@ -261,7 +261,7 @@
 .homePageNavLink {
   font-size: 1.2rem;
   font-family: "Montserrat-Light";
-  color: #e7e6e6 !important;
+  color: #fff !important;
 }
 
 .homePageNavLink > a {
@@ -269,7 +269,7 @@
 }
 
 .homePageNavLink:hover {
-  color: #fff !important;
+  opacity: 0.7 !important;
 }
 
 /* Title Section */
