--- a/src/css/Dashboard.module.css
+++ b/src/css/Dashboard.module.css
@@ -132,6 +132,10 @@ box-shadow: none !important;
 
 /* profit */
 
+.changeProfitDateIcon {
+    cursor: pointer;
+}
+
 .changeDateBtn {
     background-color: #14b1ab !important;
     border:  1px solid #14b1ab !important;
