--- a/src/css/TopNavbar.module.css
+++ b/src/css/TopNavbar.module.css
@@ -1,24 +1,38 @@
-
 .topNavbar {
   margin-left: 200px;
   background-color: #fff;
   border-bottom: 2px solid #14b1ab;
 }
 
-.topNavbarAppointmentsContainer, .topNavbarInventoryContainer {
+.topNavbarAppointmentsContainer,
+.topNavbarInventoryContainer,
+.topNavbarReasonsContainer,
+.topNavbarCategoriesContainer,
+.topNavbarProfitContainer,
+.topNavbarClientsContainer,
+.topNavbarExpensesContainer {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-.topNavbarAppointmentsLeftCol, .topNavbarInventoryLeftCol {
- flex-grow: 2;
+.topNavbarAppointmentsLeftCol,
+.topNavbarInventoryLeftCol,
+.topNavbarReasonsLeftCol,
+.topNavbarCategoriesLeftCol,
+.topNavbarProfitLeftCol,
+.topNavbarClientsLeftCol,
+.topNavbarExpensesLeftCol {
+  flex-grow: 2;
 }
 
-.topNavbarAppointmentsRightCol {
-  /* flex: 15%;
-  text-align: right; */
+.topNavbarAppointmentsRightCol,
+.topNavbarReasonsRightCol,
+.topNavbarCategoriesRightCol
+.topNavbarProfitRightCol,
+.topNavbarClientsRightCol,
+.topNavbarExpensesRightCol {
   text-align: right;
 }
 
@@ -27,41 +41,41 @@
   font-weight: bold;
 }
 
-.topNavbarAppointmentsForm, .topNavbarInventoryForm {
+.topNavbarAppointmentsForm,
+.topNavbarInventoryForm {
   float: right !important;
 }
 
 .topNavbarSearch > input {
   margin-right: 10px !important;
-  border:  1px solid #14b1ab !important;
+  border: 1px solid #14b1ab !important;
   height: 33px !important;
-
 }
 
 .topNavbarSearch > input::placeholder {
-    color: #14b1ab !important;
+  color: #14b1ab !important;
 }
 
 .topNavbarSearchIcon {
-    color: #14b1ab !important;
+  color: #14b1ab !important;
 }
 
 .topNavbarChangeAppNumberIconsGroup {
   margin-right: 10px !important;
 }
 
-
 .topNavbarReasonsButton {
   margin: 0 !important;
   margin-right: 10px !important;
-  background-color:  #14b1ab !important;
+  background-color: #14b1ab !important;
 }
 
 .topNavbarAddButton {
-  background-color:  #14b1ab !important;
+  background-color: #14b1ab !important;
 }
 
-.topNavbarAddButton:hover, .topNavbarReasonsButton:hover {
+.topNavbarAddButton:hover,
+.topNavbarReasonsButton:hover {
   opacity: 0.8 !important;
 }
 
@@ -69,9 +83,7 @@
   color: #fff !important;
 }
 
-
 /* icons  */
-
 
 .addText {
   display: none;
@@ -81,42 +93,28 @@
   .topNavbar {
     margin: 55px 0 0 0;
   }
-  /* .topNavbarLeftCol {
-    flex: 60%;
-  }
-  .topNavbarRightCol {
-    flex: 40%;
-   
-  } */
 }
 
 @media screen and (max-width: 620px) {
   .topNavbar {
     margin: 55px 0 0 0;
   }
-  .topNavbarLeftCol {
-    
-  }
-  /* .topNavbarRightCol {
-    flex: none
-   
-  } */
 }
 
 @media screen and (max-width: 375px) {
   .topNavbar {
     margin: 55px 0 0 0;
   }
- .topNavbarAppointmentsContainer {
-  flex-direction: column;
- }
+  .topNavbarAppointmentsContainer {
+    flex-direction: column;
+  }
 
-.topNavbarAppointmentsForm {
-  width:56%;
-}
+  .topNavbarAppointmentsForm {
+    width: 56%;
+  }
 
- .topNavbarAppointmentsRightCol {
-  text-align: left;
+  .topNavbarAppointmentsRightCol {
+    text-align: left;
   }
 }
 
@@ -124,23 +122,42 @@
   .topNavbar {
     margin: 55px 0 0 0;
   }
- .topNavbarAppointmentsContainer {
-  flex-direction: column;
- }
+  .topNavbarAppointmentsContainer {
+    flex-direction: column;
+  }
 
-.topNavbarAppointmentsForm {
-  width:58.5%;
-}
+  .topNavbarAppointmentsForm {
+    width: 58.5%;
+  }
 
-.topNavbarBrand {
-margin-right: -10px ;
-}
+  .topNavbarBrand {
+    margin-right: -10px;
+  }
 
- .topNavbarAppointmentsRightCol {
-  text-align: left;
+  .topNavbarAppointmentsRightCol {
+    text-align: left;
   }
 }
 
+@media screen and (max-width: 360px) {
+  .topNavbarExpensesContainer {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 335px) {
+  .topNavbarClientsContainer {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+
 @media screen and (max-width: 700px) {
-  .topNavbar.responsive {margin-top: 499px;}
+  .topNavbar.responsive {
+    margin-top: 499px;
+  }
 }
